# cpanbd

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: auth.md  file.md  index.md  requirements.txt  upload.md  user.md
docs/more/: baiduTo123.md  downfile.md  interface.md  uploadfile.md
src/cpanbd/: __init__.py  baiduTo123.py  downfile.py  file.py  upload.py  uploadfile.py  user.py
src/cpanbd/apijson/: file.json  upload.json  user.json
src/cpanbd/utils/: api.py  auth.py  baseapiclient.py  checkdata.py  const.py  core.py  download.py  md5.py
tests/: test_downfile.py  test_file.py  test_uploadfile.py  test_user.py
